--- a/vyavahAra.qmd
+++ b/vyavahAra.qmd
@@ -6,12 +6,12 @@ editor: visual
 ## <font color='indianred'>overview</font> {#sec-overview}
 
 ::: column-margin
-***vyavahār**am an-āśritya paramārtho na deśyate / paramārtham an-āgamya nirvāṇaṃ n\^ādhigamyate //* \[bhāvanākrama 177\] "Without relying on conventions, the sublime meaning cannot be taught. Without understanding the sublime meaning, one will not attain nirvana." \[Batchelor\]
+***vyavahār**am an-āśritya paramārtho na deśyate / paramārtham an-āgamya nirvāṇaṃ n\^ādhigamyate //* \[bhāvanākrama, 177\] "Without relying on conventions, the sublime meaning cannot be taught. Without understanding the sublime meaning, one will not attain nirvana." \[Batchelor\]
 :::
 
 At its core, vyavahāra expresses the idea of <b>common practice</b>. (<font color='#4682B4'>customary practice/common experience</font>). Within this broad sense, its precise meaning is rather malleable. It can point to a specific behaviour or acquire a more subjective tinge and take up a meaning closer to experience, typically ordinary, everyday experience. [^vyavahara-1]
 
-[^vyavahara-1]: *nāyaṃ pratītivirodhalakṣaṇo doṣaḥ / kutaḥ? yogināṃ pudgalanairātmyasamādhilābhināṃ yā saṃvṛtirvyavahāraḥ, tayā kṣaṇikatayā pratīteḥ / ayam abhiprāyaḥ- yadi nāma arvāgdarśanaiḥ kṣaṇikatvaṃ na pratīyate, tathāpi yogivyavahāragocaraḥ /* (bodhicaryāvatārapañjikā 182). There is not the fault characterised as being contrary to perception. Why? Because they are perceived as momentary by way of the conventional truth, conventional usage, of the yogins who have obtained meditative concentration on the non-self of the person. This is the intent: Even if momentariness is not perceived by those seeing this side, nevertheless, it is the object of the conventional usage of yogins (Oldmeadow 377.12)
+[^vyavahara-1]: *nāyaṃ pratītivirodhalakṣaṇo doṣaḥ / kutaḥ? yogināṃ pudgalanairātmyasamādhilābhināṃ yā saṃvṛtirvyavahāraḥ, tayā kṣaṇikatayā pratīteḥ / ayam abhiprāyaḥ- yadi nāma arvāgdarśanaiḥ kṣaṇikatvaṃ na pratīyate, tathāpi yogivyavahāragocaraḥ /* (bodhicaryāvatārapañjikā, 182). There is not the fault characterised as being contrary to perception. Why? Because they are perceived as momentary by way of the conventional truth, conventional usage, of the yogins who have obtained meditative concentration on the non-self of the person. This is the intent: Even if momentariness is not perceived by those seeing this side, nevertheless, it is the object of the conventional usage of yogins (Oldmeadow 377.12)
 
 Often context also narrows down vyavahāra's meaning by highlighting which kind of common practices it refers to. In our corpus, these tends to be primarily communication and business practice. These contextual specifications yield the meanings of <b>mundane affairs</b> and <b>language usage</b>.
 
@@ -19,17 +19,17 @@ The sense of <b>mundane affairs</b>, predominant in narrative literature, typica
 
 [^vyavahara-2]: ca sukhita-jana-manuṣyaṃ ca praśānta-daṇḍa-ḍamaraṃ su-nigṛhīta-taskaraṃ \<b\>vyavahāra\</b\>-sampannaṃ // (Mahāvastu, 1.272) "His kingdom was prosperous, flourishing and peaceful, had plenty of food, and was well and thickly peopled with happy subjects. Violence and riot had ceased, robbers were held in check, and commerce thrived." \\\[Jones vol. I 225\\\]
 
-[^vyavahara-3]: *iṣṭeṣv an-iṣṭeṣu ca kāryavatsu na rāga-doṣ\^āśrayatāṃ prapede śivaṃ siṣeve vyavahāra-śuddhaṃ yajñaṃ hi mene na tathā yathā tat //* buddhacarita 2.39 "**Toward litigants,** whether friend or foe, he never displayed either love or hate;**honesty in court** he practiced as a sacred act, for he deemed it better than a sacrificial rite." \[Olivelle 49\]
+[^vyavahara-3]: *iṣṭeṣv an-iṣṭeṣu ca kāryavatsu na rāga-doṣ\^āśrayatāṃ prapede śivaṃ siṣeve vyavahāra-śuddhaṃ yajñaṃ hi mene na tathā yathā tat //* buddhacarita, 2.39 "**Toward litigants,** whether friend or foe, he never displayed either love or hate;**honesty in court** he practiced as a sacred act, for he deemed it better than a sacrificial rite." \[Olivelle 49\]
 
 The sense of <b>language usage</b> (<font color='#4682B4'>language usage/communication practice</font>), predominant in sūtras and earlier śāstras, typically brings out the contrast between the inexpressibility of reality and the necessity to communicate it in words.[^vyavahara-4] Translations frequently represent this sense of vyavahāra as pertaining to "linguistic conventions"; however the conventional aspect of language as a set of agreed upon symbols is more precisely captured by the near synonym *saṃketa*. Vyavahāra appears rather to foreground the practical, de-facto, aspect of communication.[^vyavahara-5]
 
-[^vyavahara-4]: *na hi vyavahāra-satyam an-āgamya śakyā dharma-deśanā kartuṃ /* vigrahavyāvartanī 266 ("For it is not without having had recourse to the conventional truth that the nature of things can be explained." \[Westerhoff 29\])
+[^vyavahara-4]: *na hi vyavahāra-satyam an-āgamya śakyā dharma-deśanā kartuṃ /* vigrahavyāvartanī, 266 ("For it is not without having had recourse to the conventional truth that the nature of things can be explained." \[Westerhoff 29\])
 
-[^vyavahara-5]: *tasmāt tathāgato mahākāruṇiko lokasya \^ uttrāsapadaparihār \^ ārthaṃ \*\*vyavahāra\*\*vaśād uktavān; utpadyate nirudhyate c \^ eti na c \^ ātra kasyacid dharmasya \^ utpādaḥ iti /* bhāvanākrama1&3 77 ("Therefore, the supremely compassionate Tathagata, in order to abolish the world's areas of fear had said for practical reasons, that 'there is birth, there is cessation', and certainly not (for the reason) that, in the ultimate sense, any dharma is born." \[Sharma 24\]) ; *na c\^otpadyā na c\^otpannāḥ pratyayo 'pi na kecana / saṃvidyante kvacit tena vyavahāraṃ tu kathyate //* laṅkāvatārasūtra 113 ("There is nothing that is to be born, nor is there anything that has been born; even causation is not; it is because of worldly usage that things are talked of as existing." \[Suzuki 75\])
+[^vyavahara-5]: *tasmāt tathāgato mahākāruṇiko lokasya \^ uttrāsapadaparihār \^ ārthaṃ \*\*vyavahāra\*\*vaśād uktavān; utpadyate nirudhyate c \^ eti na c \^ ātra kasyacid dharmasya \^ utpādaḥ iti /* bhāvanākrama1&3, 77 ("Therefore, the supremely compassionate Tathagata, in order to abolish the world's areas of fear had said for practical reasons, that 'there is birth, there is cessation', and certainly not (for the reason) that, in the ultimate sense, any dharma is born." \[Sharma 24\]) ; *na c\^otpadyā na c\^otpannāḥ pratyayo 'pi na kecana / saṃvidyante kvacit tena vyavahāraṃ tu kathyate //* laṅkāvatārasūtra 113 ("There is nothing that is to be born, nor is there anything that has been born; even causation is not; it is because of worldly usage that things are talked of as existing." \[Suzuki 75\])
 
-It is often very difficult to tease apart the senses of vyavahāra. The boundaries between the sense of ordinary experience and language usage are especially blurry, as it often the case in Mahāyāna literature, where the cognitive and linguistic dimensions are deeply interrelated. Thus, a phrase like *kāyādivyavahāro* may refer to the words 'body' and so on or to the ordinary experience of conceiving people has having bodies.[^vyavahara-6] This ambiguity is notable in the context of the two truths, where vyavahāra may indicate the Dharma as it is taught verbally as well as the set of every day experiences any teaching inevitably needs to rely upon (see also section 3 below).
+It is often very difficult to tease apart the senses of vyavahāra. The boundaries between the sense of ordinary experience and language usage are especially blurry, as it often the case in Mahāyāna literature, where the cognitive and linguistic dimensions are deeply interrelated. Thus, a phrase like *kāyādivyavahāro* may refer to the words 'body' and so on or to the ordinary experience of conceiving people has having bodies.[^vyavahara-6] This ambiguity is notable in the context of the two truths, where vyavahāra may indicate the Dharma as it is taught verbally, as well as the set of every day experiences any teaching inevitably needs to rely upon (see also section 3 below).
 
-[^vyavahara-6]: avadhāraṇe vā tu śabdaḥ / tathā hi anavarāgra-saṃsāra-pravṛtti-janma-paraṃpara-ā-paricita-mithya-ābhyāsa-vāsanā-vaśāt yath \^ āvasthita-vastu-tattva-pratipattāv api tad viparīta-samāropa-kalpanā upajāyate / tad upanibaddho ayaṃ kāya-ādi-**vyavahāro** loke pravartate na tu pāramārthika iti // (bodhicaryāvatārapañjikā 233) "Or the word 'but' (tu) in the sense of emphasis. For so it is: On account of the latent impressions of mistaken practice accumulated over a series of births active in saṃsāra without beginning or end. Even when there is understanding of the reality of things as they are, a conceptual construction vontrary (sic) to that arises. This convetional expression of 'body' etc. connected to that is active in the world. But \[the body\] is not absolute." \[Oldmeadow 498.6\]
+[^vyavahara-6]: avadhāraṇe vā tu śabdaḥ / tathā hi anavarāgra-saṃsāra-pravṛtti-janma-paraṃpara-ā-paricita-mithya-ābhyāsa-vāsanā-vaśāt yath \^ āvasthita-vastu-tattva-pratipattāv api tad viparīta-samāropa-kalpanā upajāyate / tad upanibaddho ayaṃ kāya-ādi-**vyavahāro** loke pravartate na tu pāramārthika iti // (bodhicaryāvatārapañjikā 233) "Or the word 'but' (tu) in the sense of emphasis. For so it is: On account of the latent impressions of mistaken practice accumulated over a series of births active in saṃsāra without beginning or end. Even when there is understanding of the reality of things as they are, a conceptual construction contrary to that arises. This convetional expression of 'body' etc. connected to that is active in the world. But \[the body\] is not absolute." \[Oldmeadow 498.6\]
 
 ::: column-body-outset
 ![semantic tree](www/SemanticTree_vyavahAra.webp){#fig-semantictree}
@@ -39,13 +39,13 @@ It is often very difficult to tease apart the senses of vyavahāra. The boundari
 
 Vyavahāra is a <code>fairly frequent</code> word with a very <code>uneven distribution</code> across our corpus, with its frequency peaking in the 'commentarial' period, between the VI and XI century. This is due mostly to the type of topics to which it is associated.
 
-It is rare in narrative literature, where according to our sampled sentences it instantiates mostly the sense of mundane affairs, and it is not very frequent in sūtra and early śāstras, where it is loosely tied to the discourse on language and the two truths, while it is <code>hugely over-represented in later philosophical literature</code>, where it appears strongly related to the <code>pramāṇa discourse</code> (see by freq by tradition graph in the next section).
+It is rare in narrative literature, where according to our sampled sentences it instantiates mostly the sense of mundane affairs, and it is not very frequent in sūtras and early śāstras, where it is loosely tied to the discourse on language and the two truths. By contrast, it is <code>hugely over-represented in later philosophical literature</code>, where it appears to be strongly related to the <code>pramāṇa discourse</code> (see by freq by tradition graph in the next section).
 
 ::: panel-tabset
 ## freq graph {#sec-freqcurve}
 
 ::: column-margin
-Frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.3457822).
+Frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.7296548).
 
 Dispersion is calculated with Gries' deviation of proportion formula (Gries, S. 2008. Dispersion and adjusted frequencies in corpora. <i>International Journal of Corpus Linguistics</i>, 13(4): 403-437)
 :::
@@ -55,7 +55,7 @@ Dispersion is calculated with Gries' deviation of proportion formula (Gries, S. 
 ## genre dispersion {#sec-genredp1}
 
 ::: column-margin
-Frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.3457822).
+Frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.7296548).
 
 Dispersion is calculated with Gries' deviation of proportion formula (Gries, S. 2008. Dispersion and adjusted frequencies in corpora. <i>International Journal of Corpus Linguistics</i>, 13(4): 403-437)
 :::
@@ -65,7 +65,7 @@ Dispersion is calculated with Gries' deviation of proportion formula (Gries, S. 
 ## period disp. {#sec-perioddp1}
 
 ::: column-margin
-Frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.3457822).
+Frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.7296548).
 
 Dispersion is calculated with Gries' deviation of proportion formula (Gries, S. 2008. Dispersion and adjusted frequencies in corpora. <i>International Journal of Corpus Linguistics</i>, 13(4): 403-437)
 :::
@@ -75,7 +75,7 @@ Dispersion is calculated with Gries' deviation of proportion formula (Gries, S. 
 ## freq by period {#sec-periodBars}
 
 ::: column-margin
-Frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.3457822).
+Frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.7296548).
 
 Dispersion is calculated with Gries' deviation of proportion formula (Gries, S. 2008. Dispersion and adjusted frequencies in corpora. <i>International Journal of Corpus Linguistics</i>, 13(4): 403-437)
 :::
@@ -84,7 +84,7 @@ Dispersion is calculated with Gries' deviation of proportion formula (Gries, S. 
 
 ## info {#sec-disperioninfo}
 
-<code>frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.3457822), as opposed to the smaller corpus used for the Visual Dictionary and Thesaurus of Buddhist Sanskrit (see <a href='mangalamresearch.shinyapps.io/VisualDictionaryOfBuddhistSanskrit/' target='_blank'>dictionary</a> documentation for details).
+<code>frequency and dispersion</code> are calculated over version 1.9 of the \~7-million words <a href='https://bit.ly/BuddhistSanskritCorpus' target='_blank'>Segmented Corpus of Buddhist Sanskrit</a> (10.5281/zenodo.7296548), as opposed to the smaller corpus used for the Visual Dictionary and Thesaurus of Buddhist Sanskrit (see <a href='mangalamresearch.shinyapps.io/VisualDictionaryOfBuddhistSanskrit/' target='_blank'>dictionary</a> documentation for details).
 
 For the sake of readability, only words occurring at least 5 times in the corpus have been plotted on the frequency and dispersion curves.
 
@@ -95,11 +95,11 @@ the <code>sense by genre</code> plot is based on a sample of sentences that we h
 
 ## <font color='indianred'>register</font> {#sec-register}
 
-Based on our sampled sentences, the distribution of vyavahāra's senses across text types suggests that the meaning <code>mundane affairs</code> might have been closer to <code>general language use</code>, whereas that<code>language usage</code>, being mostly instantiated in philosophical literature, might have belonged to a <code>more scholastic register</code>. Still, despite the high frequency of vyavahāra in pramāṇa literature, this word does <code>*not* seem to have undergone a process of technical specialization</code>, at least not along the semantic lines drawn here. In fact, vyavahāra appears especially ambiguous in epistemological literature, where it is not always clear (at least not to reader less then well-versed in the pramāṇa discourse) whether vyavahāra refers to a verbal assertion regarding something (e.g. asserting that something is absent), to the ordinary experience of that thing (experiencing that something is absent) or to the common practice generally adopted towards it (treating it as absent).[^vyavahara-7] It may well be possible that these semantic distinctions are but an artefact of translation, and the Sanskrit word was fundamentally ambiguous.
+Based on our sampled sentences, the distribution of vyavahāra's senses across text types suggests that the meaning <code>mundane affairs</code> might have been closer to <code>general language use</code>, whereas the sense of <code>language usage</code>, which is mostly instantiated in philosophical literature, might have belonged to a <code>more scholastic register</code>. Still, despite the high frequency of vyavahāra in pramāṇa literature, this word does <code>*not* seem to have undergone a process of technical specialization</code>, at least not along the semantic lines drawn here. In fact, vyavahāra appears especially ambiguous in epistemological literature, where it is not always clear (at least not to readers less than well-versed in  pramāṇa) whether vyavahāra refers to a verbal assertion regarding something (e.g. asserting that something is absent), or to the ordinary experience of that thing (experiencing that something is absent) or, again, to the common practice generally adopted towards it (treating it as absent).[^vyavahara-7] It may well be possible that these semantic distinctions are but an artefact of translation, and the Sanskrit word was fundamentally ambiguous.
 
 [^vyavahara-7]: *anupalambhasya tu a-sad-vyavahāra-yogyatvena saha vyāptiḥ pratyakṣeṇ \^ aiva /* \[tarkabhāṣā 47\] ("The vyāpti between 'non-perception' and 'to be called non-existent' is grasped by the perception \[of things other than the denied object\]." \[Kajiyama 113\]) *sarva evaṃvidho anupalabdho a-sad-**vyavahāra**-viṣaya iti /* \[vādanyāya\] ("Every thing which is of this kind (i.e. which fulfils the condition of apprehensibility) and is not apprehended is the object of the practice of 'non-existence.'" \[Gokhale 25-26\]) ; *yaḥ sad-vyavahāra-viṣaya upalabdhi-lakṣaṇa-prāptaḥ sa upalabhyata eva /* \[nyāyabiṇḍu\] ("Whatsoever is present (as an object of our purposive actions) and is in conditions of perceptibility, is necesarily perceived." \[Stcherbatsky 151\]).
 
-> A passage from the *Tarkābhāṣā* is interesting in this regard. A parallel construction between vyavahāra √kṛ, which indicates a behaviour, and vyavahāra √sādh, which suggest a proposition, and the explication of trividho vyavahāra as including both kayika and vācika vyavahāra suggest either an intentional pun or that vyavahāra was perceived as intrinsically vague and able to express different semantic nuances within a single passage without compromising its coherence: *abhāva**vyavahāras** tu mūḍhaṃ prati **anupalambhena sādhyate** / tathā hikaścinmūḍho rajaḥprabhṛtiṣu sāṅkhyaprasiddheṣu guṇeṣvanupalambhena pravartitābhāvavyavahāro 'pi punaḥ sarvaṃ sarvatrāstīti svasiddhāntābhyāsāt kvā 'pi pradeśādau ghaṭānupalambhe satyapi nābhāvavyavahāraṃ karotīty **anupalambhena** trividho **vyavahāraḥ kāryate** /tatra niḥśaṅkarāmanāgamanalakṣaṇaḥ **kāyiko vyavahāraḥ** / ghaṭo **nāstīti vācikaḥ** / īdṛśa eva **antarjalpākāro mānasikaś** ceti /* (Tarkabhāṣā, 30)[^vyavahara-8]
+> A passage from the *Tarkābhāṣā* is interesting in this regard. A parallel construction between vyavahāra √kṛ, which indicates a behaviour, and vyavahāra √sādh, which suggest a proposition, and the explication of *trividho vyavahāra* as including both *kayika* and *vācika vyavahāra* suggest either an intentional pun or that vyavahāra was perceived as intrinsically vague and able to express different semantic nuances within a single passage without compromising its coherence: *abhāva**vyavahāras** tu mūḍhaṃ prati **anupalambhena sādhyate** / tathā hikaścinmūḍho rajaḥprabhṛtiṣu sāṅkhyaprasiddheṣu guṇeṣvanupalambhena pravartitābhāvavyavahāro 'pi punaḥ sarvaṃ sarvatrāstīti svasiddhāntābhyāsāt kvā 'pi pradeśādau ghaṭānupalambhe satyapi nābhāvavyavahāraṃ karotīty **anupalambhena** trividho **vyavahāraḥ kāryate** /tatra niḥśaṅkarāmanāgamanalakṣaṇaḥ **kāyiko vyavahāraḥ** / ghaṭo **nāstīti vācikaḥ** / īdṛśa eva **antarjalpākāro mānasikaś** ceti /* (Tarkabhāṣā, 30)[^vyavahara-8]
 
 [^vyavahara-8]: But \[the logical mark of\] non-cognition is aimed at establishing practical activities concerning absence (abhāvavyavahāra) \[in order to convince\] a stupefied person \[of the absence of a certain thing\]. For example, it is well known in the Saṃkhya \[thought\] that the three primordial qualities beginning with rajas are \[permanently\] existent; a certain follower \[of the school\] actually makes ordinary activities concerning absent things owing to their non-cognition; he, however, is so much inculcated in the doctrine of his own school proclaiming the existence of every thing at every place that he confusedly does not now judge the absence \[of ajar\] in one particular place or another even though the jar is not actually perceived. To this man three kinds of convincing activities (vyavahāra) are to be demonstrated by means of non-cognition: the physical activity consists in moving about the place without hesitation; the verbal activity consists in \[the statement\] that there is no jar; the mental activity is the internal thought (antarjalpa) of the same judgment.(Kajiyama, 78-79)
 
@@ -123,7 +123,7 @@ The <b>height of the bars</b> in the charts indicates the <b>normalized</b> freq
 
 ## <font color='indianred'>context</font> {#sec-context}
 
-The word vyavahāra occurs in three main contexts: the context of trade and affairs, the Mahāyana discourse on language and the two truths and in the context of pramāṇa, especially in the discussion of anupalabdhi. Statistically, the first is too infrequent and lexically varied to yield any keywords, while the others are represented by the keywords displayed in the wordcloud below. Notably, statistical analysis of the immediate context of vyavahāra in our corpus leads to a neat distinction between pramāṇa contexts and all the rest (see dendogram tab below), suggesting that vyavhāra is woven in markedly different lexical pattern in the epistemological literature compared to the rest of the corpus.
+The word vyavahāra occurs in three main contexts: (1) the context of trade and affairs, (2) the Mahāyana discourse on language and the two truths and (3) in the context of pramāṇa, especially in the discussion of anupalabdhi. Statistically, the first is too infrequent and lexically varied to yield any keywords, while the others are represented by the keywords displayed in the wordcloud below. Notably, statistical analysis of the immediate context of vyavahāra in our corpus leads to a neat distinction between pramāṇa contexts and all the rest (see dendogram tab below), suggesting that vyavhāra is woven in markedly different lexical patterns in the epistemological literature compared to the rest of the corpus.
 
 ::: panel-tabset
 
@@ -162,7 +162,7 @@ The <b>dendogram</b> is based on the <code>cosine similarity of each keyword wit
 
 ## <font color='indianred'>connotation</font> {#sec-connotation}
 
-Vyavahāra has a <code>neutral connotation</code>, as befits the generic character of its core sense of 'common practice'. It retains a mostly neutral connotation even in the sense of verbal practice, contrary to most o words related to the Mahāyāna discourse on language, which tend to acquire a negative semantic prosody in sūtras. This is because vyavahāra is seen mostly as a necessary, if imperfect, bridge towards <i>paramārtha</i>, rather than as a source of delusion. The sense of mundane affairs occurs in a positive prosody in narrative literature, but, predictably, assumes a negative tinge in pratimokṣa contexts, where dealing with money is forbidden.
+Vyavahāra has a <code>neutral connotation</code>, as befits the generic character of its core sense 'common practice'. It retains a mostly neutral connotation also in the sense of verbal practice, contrary to most o words related to the Mahāyāna discourse on language, which tend to acquire a negative semantic prosody in sūtras. This is because vyavahāra is seen mostly as a necessary, if imperfect, bridge towards <i>paramārtha</i>, rather than as a source of delusion. The sense of mundane affairs occurs in a positive prosody in narrative literature, but, predictably, assumes a negative tinge in pratimokṣa contexts, where dealing with money is forbidden.
 
 ::: panel-tabset
 ## semantic prosody proportion
